将项目中的公用实体和依赖提取到cloud-api-commons模块中，注意关于依赖传递的<optional>标签

--- a/cloud2022/cloud-consumer-order80/pom.xml
+++ b/cloud2022/cloud-consumer-order80/pom.xml
@@ -20,12 +20,11 @@
         </dependency>-->
 
         <!-- 引入自己定义的api通用包 -->
-        <!--<dependency>
-            <groupId>com.atguigu.springcloud</groupId>
+        <dependency>
+            <groupId>com.zhouxk.springcloud</groupId>
             <artifactId>cloud-api-commons</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>-->
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
         <dependency>
@@ -39,20 +38,22 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.boot</groupId>-->
-        <!--            <artifactId>spring-boot-devtools</artifactId>-->
-        <!--            <scope>runtime</scope>-->
-        <!--            <optional>true</optional>-->
-        <!--        </dependency>-->
+        <!--热部署-->
+        <!--推荐开发阶段使用-->
+        <!--https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools-->
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
