--- a/cloud2022/cloud-provider-payment8001/pom.xml
+++ b/cloud2022/cloud-provider-payment8001/pom.xml
@@ -20,12 +20,11 @@
         </dependency>-->
 
         <!-- 引入自己定义的api通用包 -->
-        <!--<dependency>
-            <groupId>com.atguigu.springcloud</groupId>
+        <dependency>
+            <groupId>com.zhouxk.springcloud</groupId>
             <artifactId>cloud-api-commons</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>-->
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
         <dependency>
@@ -66,19 +65,19 @@
         <!--热部署-->
         <!--推荐开发阶段使用-->
         <!--https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
