--- a/cloud2022/pom.xml
+++ b/cloud2022/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>cloud-provider-payment8001</module>
     <module>cloud-consumer-order80</module>
+      <module>cloud-api-commons</module>
   </modules>
   <packaging>pom</packaging>
 
@@ -72,6 +73,13 @@
         <groupId>org.mybatis.spring.boot</groupId>
         <artifactId>mybatis-spring-boot-starter</artifactId>
         <version>${mybatis.spring.boot.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.version}</version>
+        <optional>true</optional>
       </dependency>
 
     </dependencies>
