--- a/cloud2022/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud2022/cloud-eureka-server7001/src/main/resources/application.yml
@@ -5,7 +5,8 @@ server:
 eureka:
   instance:
     #eureka服务端的实例名字
-    hostname: localhost
+    #单机版 localhost
+    hostname: eureka7001
   client:
     #表示不向注册中心注册自己
     register-with-eureka: false
@@ -13,4 +14,6 @@ eureka:
     fetch-registry: false
     service-url:
       #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      # 单机版，注册自己 http://${eureka.instance.hostname}:${server.port}/eureka/
+      # 集群版，注册其余的服务
+      defaultZone: http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
