--- a/cloud2022/cloud-consumerfeign-order84/pom.xml
+++ b/cloud2022/cloud-consumerfeign-order84/pom.xml
@@ -46,12 +46,12 @@
         <!--热部署-->
         <!--推荐开发阶段使用-->
         <!--https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools-->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
-        </dependency>-->
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <!--<dependency>
