--- a/cloud2022/pom.xml
+++ b/cloud2022/pom.xml
@@ -24,6 +24,7 @@
     <module>cloud-consumerfeign-order84</module>
     <module>cloud-provider-hystrix-payment8001</module>
     <module>cloud-consumer-feign-hystrix-order80</module>
+      <module>cloud-consumer-feign-hystrix-order81</module>
   </modules>
   <packaging>pom</packaging>
 
