--- a/cloud2022/pom.xml
+++ b/cloud2022/pom.xml
@@ -25,6 +25,7 @@
     <module>cloud-provider-hystrix-payment8001</module>
     <module>cloud-consumer-feign-hystrix-order80</module>
       <module>cloud-consumer-feign-hystrix-order81</module>
+      <module>cloud-consumer-hystrix-dashboard9001</module>
   </modules>
   <packaging>pom</packaging>
 
