--- a/cloud2022/pom.xml
+++ b/cloud2022/pom.xml
@@ -26,6 +26,7 @@
     <module>cloud-consumer-feign-hystrix-order80</module>
       <module>cloud-consumer-feign-hystrix-order81</module>
       <module>cloud-consumer-hystrix-dashboard9001</module>
+    <module>cloud-gateway-gateway9527</module>
   </modules>
   <packaging>pom</packaging>
 
