--- a/cloud2022/cloud-provider-payment8002/pom.xml
+++ b/cloud2022/cloud-provider-payment8002/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>cloud-provider-payment8002</artifactId>
 
     <dependencies>
+        <!--        包含了Sleuth-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <!-- 服务注册中心的客户端端 eureka-client -->
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka-server -->
         <dependency>
