--- a/cloud2022/cloud-api-commons/pom.xml
+++ b/cloud2022/cloud-api-commons/pom.xml
@@ -13,12 +13,12 @@
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
-            <!--<optional>true</optional>-->
-        </dependency>
+            &lt;!&ndash;<optional>true</optional>&ndash;&gt;
+        </dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
